scroll assist and ion content addition to avoid keyboard overlap on input

--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -1,3 +1,7 @@
+ion-content.signup {
+    background: transparent !important;
+}
+
 .sign-up ion-item {
     background: transparent;
     color: #00254b;
